[package]
name = "paraformer"
version = "0.1.0"
edition = "2024"
description = "使用rust candle框架实现的paraformer推理"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
ndarray = { version="0.16.1", features=["rayon"]}


[[bin]]
name = "paraformer"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["coreml", "ndarray", "load-dynamic"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
